# huddle

./: README.md  compose.dev.yaml  compose.yaml
client/: Dockerfile  nginx.conf.template  package-lock.json  package.json
client/public/: logo512.xcf
client/src/: App.tsx
server/: Cargo.toml  Dockerfile
server/migrations/2024-04-24-092618_create_counter/: down.sql  up.sql
server/sql/: get_count.sql  increment_count.sql  schema.sql
server/src/: config.rs  db.rs  errors.rs  handlers.rs  main.rs  models.rs  schema.rs
